removed deprecated endpoints from OpenAPI and backend
